--- a/src/app/components/wxDetails/wxDetails.component.html
+++ b/src/app/components/wxDetails/wxDetails.component.html
@@ -8,44 +8,52 @@
             Observed Conditions
           </h3>
           <div class="text-xs text-gray-300 md:text-base ml-2">
-            {{ huntDates && huntDates[0].start | date: 'MM/dd/yyyy' }} &ndash; {{ huntDates && huntDates[0].end | date: 'MM/dd/yyyy' }}
+            {{ wx.huntDetails.huntDates && wx.huntDetails.huntDates[0].start | date: 'MM/dd/yyyy' }} &ndash;
+              {{ wx.huntDetails.huntDates && wx.huntDetails.huntDates[0].end | date: 'MM/dd/yyyy' }}
           </div>
         </div>
-        <button (click)="close()" type="button"
-          class="border inline-flex h-8 w-8 mr-2 md:mt-[-10px] mr-4 items-center justify-center rounded-full bg-transparent text-gray-400 hover:bg-gray-600 hover:text-white cursor-pointer">
-            <svg class="h-3 w-3" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
-              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
-            </svg>
-            <span class="sr-only">Close modal</span>
-        </button>
+        <div class="flex items-center">
+          @if (activatedRoute.snapshot.url && activatedRoute.snapshot.url[0]) {
+            <button (click)="location.back()" type="button" class="flex items-center cursor-pointer py-1.5 px-3 me-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-full border border-gray-200 focus:z-10 focus:ring-4 focus:ring-gray-100 focus:ring-gray-700 bg-gray-800 text-gray-400 border-gray-600 hover:text-white hover:bg-gray-700" >
+              <ng-icon name="heroArrowLeft" class="mr-1"></ng-icon> Back to WMA Results
+            </button>
+          }
+          <button (click)="close()" type="button"
+            class="border inline-flex h-8 w-8 mr-2 md:mt-[-10px] mr-4 items-center justify-center rounded-full bg-transparent text-gray-400 hover:bg-gray-600 hover:text-white cursor-pointer">
+              <svg class="h-3 w-3" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
+              </svg>
+              <span class="sr-only">Close results</span>
+          </button>
+        </div>
       </div>
       <div class="pt-1 flow-root border-b border-gray-300 bg-gray-800">
         <div class="text-xs md:text-sm md:float-left text-gray-400 pl-4 md:pb-4 mt-1 italic">
-          &#64; {{ location }}, Georgia
+          &#64; {{ wx.huntDetails.location }}, Georgia
         </div>
         <div class="flex items-center text-xs py-1 md:float-right md:p-2 bg-gray-900 md:rounded-tl-lg md:border-t md:border-l md:border-gray-500">
           <span class="chip result-chip text-xs mx-1"
-                [class.chip-firearm]="hunt?.weapon === 'Buckshot Only' || hunt?.weapon === 'Firearms'"
-                [class.chip-archery]="hunt?.weapon === 'Archery'"
-                [class.chip-primitive]="hunt?.weapon === 'Primitive'">
-                {{ hunt?.weapon }}</span>
+                [class.chip-firearm]="wx.huntDetails.weapon === 'Buckshot Only' || wx.huntDetails.weapon === 'Firearms'"
+                [class.chip-archery]="wx.huntDetails.weapon === 'Archery'"
+                [class.chip-primitive]="wx.huntDetails.weapon === 'Primitive'">
+                {{ wx.huntDetails.weapon }}</span>
           <span class="text-gray-400 font-semibold uppercase">Hunters:</span>
-          <span class="px-1 border-r border-gray-500 text-gray-200">{{ hunt?.hunterCount }}</span>
+          <span class="px-1 border-r border-gray-500 text-gray-200">{{ wx.huntDetails.hunterCount }}</span>
           <span class="mx-1 text-gray-400 font-semibold uppercase">Bucks:</span>
-          <span class="px-1 border-r border-gray-500 text-gray-200">{{ hunt?.bucks }}</span>
+          <span class="px-1 border-r border-gray-500 text-gray-200">{{ wx.huntDetails.bucks }}</span>
           <span class="mx-1 text-gray-400 font-semibold uppercase">Does:</span>
-          <span class="px-1 md:border-r border-gray-500 text-gray-200">{{ hunt?.does }}</span>
-          @if (hunt) {
+          <span class="px-1 md:border-r border-gray-500 text-gray-200">{{ wx.huntDetails.does }}</span>
+          @if (wx.huntDetails) {
             <span class="hidden md:block ml-1 text-gray-400 font-semibold uppercase">Success <span class="hidden md:inline-block">Rate</span>:</span>
-            <span class="md:block ml-1 font-bold {{ hunt | successRateColor }}">
-              <span class="md:hidden">(</span>{{ hunt | successRate }}&percnt;<span class="md:hidden">)</span>
+            <span class="md:block ml-1 font-bold {{ wx.huntDetails | successRateColor }}">
+              <span class="md:hidden">(</span>{{ wx.huntDetails | successRate }}&percnt;<span class="md:hidden">)</span>
             </span>
           }
         </div>
       </div>
 
       @if (wxDetailsLoading$ | async) {
-        <gawmas-wx-details-skeleton [duration]="duration" />
+        <gawmas-wx-details-skeleton [duration]="wx.huntDetails.huntDates | huntDuration" />
       } @else {
 
         <div class="p-2">
@@ -83,8 +91,8 @@
             &ast;Roughly 30 minutes to 1.5 hours after sunrise or before sunset.
           </div>
           <div class="w-full md:flex items-center mb-3">
-            @for (d of $any(dateKeys(wx.primetimes)); track d; let last = $last) {
-              <div class="p-1 {{ dateKeys(wx.primetimes).length < 3 ? 'md:w-1/2' : 'md:w-1/3' }} {{ !last ? 'md:border-r border-gray-400' : 'md:border-none' }}">
+            @for (d of $any(wx.primetimes | objKeys); track d; let last = $last) {
+              <div class="p-1 {{ (wx.primetimes | objKeys).length < 3 ? 'md:w-1/2' : 'md:w-1/3' }} {{ !last ? 'md:border-r border-gray-400' : 'md:border-none' }}">
                 <div class="text-sm text-gray-200 italic text-center uppercase font-bold">
                   {{ d | date: 'EEEE' }}
                 </div>
@@ -136,7 +144,7 @@
             @for (m of $any(wx.astros); track m.id; let i = $index; let last = $last) {
               <div class="p-1 mt-2 {{ wx.astros.length < 3 ? 'md:w-1/2' : 'md:w-1/3' }} {{ !last ? 'md:border-r border-gray-400' : 'md:border-none' }}">
                 <div class="text-sm text-gray-200 italic text-center uppercase font-bold md:hidden">
-                  {{ $any(dateKeys(wx.primetimes))[i] | date: 'EEEE' }}
+                  {{ $any(wx.primetimes | objKeys)[i] | date: 'EEEE' }}
                 </div>
                 <div class="text-gray-200 text-sm text-center">
                   {{ m.moonPhase }}, {{ m.moonIllum }}&percnt;
@@ -161,7 +169,7 @@
             @for (s of $any(wx.astros); track s.id; let i = $index; let last = $last) {
               <div class="p-1 mt-2  {{ wx.astros.length < 3 ? 'md:w-1/2' : 'md:w-1/3' }} {{ !last ? 'md:border-r border-gray-400' : 'md:border-none' }}">
                 <div class="text-sm text-gray-200 italic text-center uppercase font-bold md:hidden">
-                  {{ $any(dateKeys(wx.primetimes))[i] | date: 'EEEE' }}
+                  {{ $any(wx.primetimes | objKeys)[i] | date: 'EEEE' }}
                 </div>
                 <div class="pb-0 mb-0 flex items-center justify-center">
                   <span class="text-xs px-1 text-gray-400 font-semibold uppercase">Sunrise:</span>
