--- a/src/app/components/wxDetails/wxDetails.component.html
+++ b/src/app/components/wxDetails/wxDetails.component.html
@@ -12,9 +12,9 @@
               {{ wx.huntDetails.huntDates && wx.huntDetails.huntDates[0].end | date: 'MM/dd/yyyy' }}
           </div>
         </div>
-        <div class="flex items-center">
+        <div class="md:flex md:items-center">
           @if (activatedRoute.snapshot.url && activatedRoute.snapshot.url[0]) {
-            <button (click)="location.back()" type="button" class="flex items-center cursor-pointer py-1.5 px-3 me-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-full border border-gray-200 focus:z-10 focus:ring-4 focus:ring-gray-100 focus:ring-gray-700 bg-gray-800 text-gray-400 border-gray-600 hover:text-white hover:bg-gray-700" >
+            <button (click)="location.back()" type="button" class="hidden md:flex items-center cursor-pointer py-1.5 px-3 me-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-full border border-gray-200 focus:z-10 focus:ring-4 focus:ring-gray-100 focus:ring-gray-700 bg-gray-800 text-gray-400 border-gray-600 hover:text-white hover:bg-gray-700" >
               <ng-icon name="heroArrowLeft" class="mr-1"></ng-icon> Back to WMA Results
             </button>
           }
@@ -37,11 +37,14 @@
                 [class.chip-archery]="wx.huntDetails.weapon === 'Archery'"
                 [class.chip-primitive]="wx.huntDetails.weapon === 'Primitive'">
                 {{ wx.huntDetails.weapon }}</span>
+
           <span class="text-gray-400 font-semibold uppercase">Hunters:</span>
           <span class="px-1 border-r border-gray-500 text-gray-200">{{ wx.huntDetails.hunterCount }}</span>
-          <span class="mx-1 text-gray-400 font-semibold uppercase">Bucks:</span>
+
+          <span class="ml-1 text-gray-400 font-semibold uppercase">Bucks:</span>
           <span class="px-1 border-r border-gray-500 text-gray-200">{{ wx.huntDetails.bucks }}</span>
-          <span class="mx-1 text-gray-400 font-semibold uppercase">Does:</span>
+
+          <span class="ml-1 text-gray-400 font-semibold uppercase">Does:</span>
           <span class="px-1 md:border-r border-gray-500 text-gray-200">{{ wx.huntDetails.does }}</span>
           @if (wx.huntDetails) {
             <span class="hidden md:block ml-1 text-gray-400 font-semibold uppercase">Success <span class="hidden md:inline-block">Rate</span>:</span>
